# chain-forensics

./: README.md
backend/: Cargo.toml
backend/migrations/: 20240226024643_initial.sql
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  next.config.mjs  package.json
frontend/src/: main.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/ui/: search.tsx
