[package]
name = "chain-forensics-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
